Fix alignfull item width.
Props to @MaggieCabrera for noticing this. 🙌

--- a/photo-blocks/style.css
+++ b/photo-blocks/style.css
@@ -29,10 +29,6 @@ Screenshot Images from stocksnap.io. CC0 License.
 	margin: 0;
 }
 
-.wp-block-column:not(:first-child) {
-	margin-left: 14px;
-}
-
 .wp-block-column .wp-block-columns {
 	margin-bottom: 0;
 }
